--- a/covariate_labeling.ipynb
+++ b/covariate_labeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import raw data\n",
-    "df = pd.read_parquet(r'C:\\Users\\ardit\\Desktop\\_projects\\atlantis-nova\\simtag\\notebooks\\steam-games\\games.parquet').dropna()\n",
+    "df = pd.read_parquet('games.parquet').dropna()\n",
     "df['Tags'] = df['Tags'].apply(lambda x : x.split(','))\n",
     "df['Genres'] = df['Genres'].apply(lambda x : x.split(','))\n",
     "df = df.drop(['game_vector', 'game_indices', 'Score', 'Recommendations'], axis=1)\n",
@@ -1049,9 +1049,9 @@
     "\n",
     "\treturn df_['Score'].values.tolist(), tags_top, knn_tags\n",
     "\n",
-    "# r = random.randint(0, len(df))\n",
-    "# print('index:', r)\n",
-    "r = 4\n",
+    "r = random.randint(0, len(df))\n",
+    "print('index:', r)\n",
+    "# r = 4 # if you are following the article, choose r = 4\n",
     "str1 = df.iloc[r]['About the game']\n",
     "scores, tags_top, knn_tags = covariate_tagging(str1, inflection_point=2)\n",
     "print(knn_tags)"
